<resources>
    <string name="app_name">EconSociety</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="screen_1">screen 1</string>
    <string name="screen_2">screen 2</string>
    <string name="line_1">Line 1</string>
    <string name="line_2">line 2</string>
    <string name="name">Name</string>
    <string name="id_number">id Number</string>
    <string name="percentage_attendance">Percentage attendance</string>
    <string name="attendance">% attendance</string>
    <string name="generate">GENERATE</string>
    <string name="MTextname">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="action_favorite">test</string>
    <string name="add_drop">Add Meeting</string>
</resources>
