<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="4dp"
    android:layout_marginBottom="4dp"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/relative"
        android:layout_width="match_parent"
        android:padding="4dp"
        android:background="@color/cardview_dark_background"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/line1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/line2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/id_number"
            android:textSize="15sp"
            android:layout_below="@+id/line1"
            />

        <TextView
            android:id="@+id/line3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/line1"
            android:layout_alignParentRight="true"
            android:layout_marginTop="0dp"
            android:layout_marginRight="164dp"
            android:text="@string/attendance"
            android:textSize="15sp" />
        <TextView
            android:id="@+id/signedInDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_alignParentRight="true"
            android:layout_marginTop="0dp"
            android:layout_marginRight="164dp"
            android:text="@string/attendance"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/bin"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="246dp"
            android:layout_toEndOf="@+id/line2"
            android:src="@drawable/ic_delete_black_24dp" />


    </RelativeLayout>

</android.support.v7.widget.CardView>